syntax = "proto3";
package mainchain.enterprise.v1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "mainchain/enterprise/v1/enterprise.proto";
import "amino/amino.proto";

option go_package = "github.com/unification-com/mainchain/x/enterprise/types";

// Msg defines the enterprise Msg service.
service Msg {
  // UndPurchaseOrder defines a method to create new purchase order.
  rpc UndPurchaseOrder(MsgUndPurchaseOrder)
      returns (MsgUndPurchaseOrderResponse);

  // ProcessUndPurchaseOrder defines a method to process a decision on a purchase order.
  rpc ProcessUndPurchaseOrder(MsgProcessUndPurchaseOrder)
      returns (MsgProcessUndPurchaseOrderResponse);

  // WhitelistAddress defines a method to execute a whitelist action.
  rpc WhitelistAddress(MsgWhitelistAddress)
      returns (MsgWhitelistAddressResponse);

  // UpdateParams defines an operation for updating the x/enterprise module
  // parameters.
  // Since: cosmos-sdk 0.47
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgUndPurchaseOrder represents a message to raise a new purchase order
message MsgUndPurchaseOrder {
  option (cosmos.msg.v1.signer) = "purchaser";

  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // purchaser is the address of the account raising the purchase order
  string purchaser = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // amount is the amount of eFUND in nund
  cosmos.base.v1beta1.Coin amount = 2 [ (gogoproto.nullable) = false ];
}

// MsgUndPurchaseOrderResponse defines the Msg/UndPurchaseOrder response type.
message MsgUndPurchaseOrderResponse { uint64 purchase_order_id = 1; }

// MsgProcessUndPurchaseOrder represents a message to processed a raised purchase order
message MsgProcessUndPurchaseOrder {
  option (cosmos.msg.v1.signer) = "signer";

  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // purchase_order_id is the ID of the purchase order being raised
  uint64 purchase_order_id = 1 [ (gogoproto.jsontag) = "id", (gogoproto.moretags) = "yaml:\"id\"" ];
  // decision is an enumerated PurchaseOrderStatus representing, for example accepted/rejected
  PurchaseOrderStatus decision = 2;
  // signer is the address of the authorised decision maker
  string signer = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgProcessUndPurchaseOrderResponse defines the Msg/ProcessUndPurchaseOrder response type.
message MsgProcessUndPurchaseOrderResponse {}

// MsgWhitelistAddress represents a message to processed an address whitelist action.
// only addresses whitelisted by an authorised decision maker can raise new purchase orders
message MsgWhitelistAddress {
  option (cosmos.msg.v1.signer) = "signer";

  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  // address is the address for which the action is being executed
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // signer is the address of the authorised decision maker
  string signer = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // whitelist_action is the action being executed, and is either add or remove.
  WhitelistAction whitelist_action = 3 [ (gogoproto.customname) = "Action",  (gogoproto.jsontag) = "action", (gogoproto.moretags) = "yaml:\"action\"" ];
}

// MsgWhitelistAddressResponse defines the Msg/WhitelistAddress response type.
message MsgWhitelistAddressResponse{}

// MsgUpdateParams is the Msg/UpdateParams request type.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "mainchain/x/enterprise/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // params defines the x/staking parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
};

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParamsResponse {};
